--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
   </head>
   <body>
-    <h1>Headline</h1>
+    <h1 class="head">Headline</h1>
     <p>
       Lorem Ipsum is simply dummy text of the printing and typesetting industry.
       Lorem Ipsum has been the industry's standard dummy text ever since the
